--- a/robo-friends/package.json
+++ b/robo-friends/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://tohe-mt.github.io/reactProject-ZTM/",
   "name": "robo-friends",
   "version": "0.1.0",
   "private": true,
